# mcpsafetywarden

./: .codespellrc  .gitignore  COMPARISON.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  classifier.py  claude_config_example.json  cli.py  client_manager.py  database.py  evil_server_graph.mmd  glama.json  mcpsafety_scanner.py  profiler.py  pyproject.toml  requirements.txt  scanner.py  security_utils.py  server.json  server.py  smithery.yaml  test_suite.py
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  container-rescan.yml  dependency-review.yml  dependency-submission.yml  docker-build.yml  dockerhub-cleanup.yml  extras-audit.yml  ghcr-cleanup.yml  gitleaks.yml  post-merge-self-scan.yml  pr-labeler.yml  publish-registry.yml  publish.yml  refresh-latest-container.yml  release-drafter.yml  scorecard.yml  stale.yml  update-badges.yml
conda-recipe/: meta.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/layout/: Shell.tsx
dashboard/src/components/ui/: Badge.tsx  Card.tsx  Loading.tsx  Table.tsx
dashboard/src/lib/: utils.ts
dashboard/src/pages/: Findings.tsx  Graph.tsx  History.tsx  Overview.tsx  Policies.tsx  ServerDetail.tsx  Servers.tsx  Tools.tsx
docs/: CLI.md  COMPARISON.md  DEPLOYMENT.md  INTEGRATIONS.md  ROADMAP.md  SECURITY.md  TESTING.md  TOOLS.md  TROUBLESHOOTING.md
examples/: drift_detection.ipynb  quickstart.ipynb  source_code_scanning.ipynb
mcpsafetywarden/: __init__.py  arg_scanner.py  aux_integrations.py  classifier.py  cli.py  client_manager.py  dashboard.py  dashboard_db.py  database.py  discovery.py  drift.py  mcpsafety_scanner.py  profiler.py  scanner.py  security_utils.py  server.py  source_recon.py
mcpsafetywarden/core/: database.py  profiler.py  security_utils.py
mcpsafetywarden/graph/: _constants.py  builder.py  explain.py  provenance.py  store.py
mcpsafetywarden/inventory/: models.py
mcpsafetywarden/proxy/: client.py  discovery.py  drift.py
mcpsafetywarden/scan/: args.py  auxiliary.py  classifier.py  mcpsafety.py  scanner.py  source.py
mcpsafetywarden/semgrep_rules/: mcp_security.yaml
mcpsafetywarden/server/: __init__.py  _app.py  _execution.py  _graph.py  _hooks.py  _registration.py  _scan.py
mcpsafetywarden/static/: index.html
mcpsafetywarden/static/assets/: index-CR6m_E-c.css  index-Ck7BS2SC.js  index-DLhLvkch.css  index-DfFsnY81.js
scripts/: plot_cve_blast.py  plot_risk_graph.py
tests/: conftest.py  test_cref.py  test_drift.py  test_misc.py  test_redteam.py  test_registration.py  test_scanning.py  test_suite.py  test_tool_ops.py  test_tools.py
tests/helpers/: drift_server.py  malicious_server.py
