[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcpsafetywarden"
version = "0.1.0"
description = "MCP proxy server with behavioral profiling, security scanning, risk gating, and safe execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "platformdirs>=4.0.0",
    "mcp>=1.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
cisco = ["cisco-ai-mcp-scanner>=4.0.0"]
snyk = ["snyk-agent-scan>=0.4.0"]
research = ["duckduckgo-search>=6.0.0", "arxiv>=2.0.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "cisco-ai-mcp-scanner>=4.0.0",
    "snyk-agent-scan>=0.4.0",
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.0.0",
]

[project.scripts]
mcpsafetywarden = "mcpsafetywarden.cli:app"
mcpsafetywarden-server = "mcpsafetywarden.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpsafetywarden*"]
