[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpsafetywarden"
version = "0.1.2"
description = "MCP proxy server with behavioral profiling, security scanning, risk gating, and safe execution"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Gautam Datla", email = "gautamdsrc@gmail.com"},
]
keywords = [
    "mcp", "model-context-protocol", "security", "proxy",
    "llm", "ai-safety", "prompt-injection", "behavioral-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "platformdirs>=4.0.0",
    "mcp>=1.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/gautamvarmadatla/mcpsafetywarden"
Repository = "https://github.com/gautamvarmadatla/mcpsafetywarden"
Issues = "https://github.com/gautamvarmadatla/mcpsafetywarden/issues"
Changelog = "https://github.com/gautamvarmadatla/mcpsafetywarden/releases"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
cisco = ["cisco-ai-mcp-scanner>=4.0.0"]
snyk = ["snyk-agent-scan>=0.4.0"]
research = ["duckduckgo-search>=6.0.0", "arxiv>=2.0.0"]
encryption = ["cryptography>=42.0.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "cisco-ai-mcp-scanner>=4.0.0",
    "snyk-agent-scan>=0.4.0",
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
mcpsafetywarden = "mcpsafetywarden.cli:app"
mcpsafetywarden-server = "mcpsafetywarden.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpsafetywarden*"]
